Fix alignment of line numbers in quick open

--- a/src/components/shared/ResultList.css
+++ b/src/components/shared/ResultList.css
@@ -28,6 +28,10 @@
   border-bottom: 1px solid var(--theme-splitter-color);
 }
 
+.result-list.small li {
+  justify-content: space-between;
+}
+
 .result-list li:hover {
   background: var(--theme-tab-toolbar-background);
 }
